# skazzbot

./: README.md
camcv/: CMakeCache.txt  CMakeLists.txt  RaspiTexUtil.c  camcv  camcv.c  camcv_vid  camcv_vid1  camcv_vid1.cpp  faces.txt
camcv/libfacerec-0.04/: CMakeCache.txt  Makefile  cmake_install.cmake  fisherfaces
preparephotos/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  prepare  preparePhoto.cpp
